log
mi., 15 de feb. de 2023 12:35:23: 
 tests:  0|6
total_score: 0/70
7964391
Thu 30 Mar 2023 03:23:42 PM UTC: 
 tests:  0|6
total_score: 0/70
d3f4022
Thu 30 Mar 2023 03:31:16 PM UTC: 
 arraylist.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:17:1: error: control reaches end of non-void function [-Werror=return-type]
   17 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
1d1c630
Thu 30 Mar 2023 03:31:28 PM UTC: 
 arraylist.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|6
total_score: 0/70
f55d422
Thu 30 Mar 2023 03:34:34 PM UTC: 
 arraylist.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:16:9: error: ‘*List.data’ is used uninitialized [-Werror=uninitialized]
   16 |     List->data[i] = NULL;
      |     ~~~~^~~~~~
cc1: all warnings being treated as errors
Compilation failed
cd92318
Thu 30 Mar 2023 03:35:55 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:16:16: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘->’ token
   16 |     void * List->data = (void *) malloc(sizeof(void));
      |                ^~
arraylist.c:16:16: error: expected expression before ‘->’ token
Compilation failed
8659f7b
Thu 30 Mar 2023 03:36:13 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:16:17: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘->’ token
   16 |     void ** List->data = (void **) malloc(sizeof(void));
      |                 ^~
arraylist.c:16:17: error: expected expression before ‘->’ token
Compilation failed
9a38a14
Thu 30 Mar 2023 03:36:40 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:16:14: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘->’ token
   16 |     void List->data = (void) malloc(sizeof(void));
      |              ^~
arraylist.c:16:14: error: expected expression before ‘->’ token
Compilation failed
7042dd2
Thu 30 Mar 2023 03:37:04 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:16:10: error: variable or field ‘data’ declared void
   16 |     void data = (void) malloc(sizeof(void));
      |          ^~~~
arraylist.c:16:17: error: void value not ignored as it ought to be
   16 |     void data = (void) malloc(sizeof(void));
      |                 ^
arraylist.c:16:10: error: unused variable ‘data’ [-Werror=unused-variable]
   16 |     void data = (void) malloc(sizeof(void));
      |          ^~~~
cc1: all warnings being treated as errors
Compilation failed
0e891a4
Thu 30 Mar 2023 03:37:14 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:16:14: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘.’ token
   16 |     void List.data = (void) malloc(sizeof(void));
      |              ^
arraylist.c:16:14: error: expected expression before ‘.’ token
Compilation failed
8b0c769
Thu 30 Mar 2023 03:37:58 PM UTC: 
 arraylist.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:16:12: error: unused variable ‘dato’ [-Werror=unused-variable]
   16 |     void * dato = (void *) malloc(sizeof(void));
      |            ^~~~
arraylist.c:18:16: error: ‘dato’ undeclared (first use in this function)
   18 |   List->data = dato;
      |                ^~~~
arraylist.c:18:16: note: each undeclared identifier is reported only once for each function it appears in
cc1: all warnings being treated as errors
Compilation failed
925ca5c
Thu 30 Mar 2023 03:38:29 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:16:12: error: unused variable ‘dato’ [-Werror=unused-variable]
   16 |     void * dato = (void *) malloc(sizeof(void *));
      |            ^~~~
arraylist.c:18:16: error: ‘dato’ undeclared (first use in this function)
   18 |   List->data = dato;
      |                ^~~~
arraylist.c:18:16: note: each undeclared identifier is reported only once for each function it appears in
cc1: all warnings being treated as errors
Compilation failed
35f569a
Thu 30 Mar 2023 03:39:12 PM UTC: 
 arraylist.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
df457e3
Thu 30 Mar 2023 03:39:40 PM UTC: 
 arraylist.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 0/70
41a8697
Thu 30 Mar 2023 03:39:49 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
8477888
Thu 30 Mar 2023 03:46:30 PM UTC: 
 arraylist.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
In file included from test.c:5:
arraylist.c: In function ‘append’:
arraylist.c:25:17: error: statement with no effect [-Werror=unused-value]
   25 |     l->capacity * 2;
      |     ~~~~~~~~~~~~^~~
cc1: all warnings being treated as errors
Compilation failed
3981ad7
Thu 30 Mar 2023 03:46:58 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
77a321d
Thu 30 Mar 2023 03:48:24 PM UTC: 
 arraylist.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  1|5
total_score: 10/70
a80fc1c
Thu 30 Mar 2023 03:49:01 PM UTC: 
 arraylist.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|5
total_score: 10/70
f68fff4
Thu 30 Mar 2023 03:49:53 PM UTC: 
 arraylist.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
f52c277
